# show-client-cert

./: .gitignore  .goreleaser.yaml  Cargo.toml  mise.toml  release  server.crt  server.key
scripts/shims/: dlltool
src/: main.rs
